--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <h1>THIS IS MY RANDOM HTML TEST PAGE </h1>
 
 <p2>I don't know how to use CSS and HTML and I am trying to learn how to use it successfully so later in life things wil be easier and I won't struggle as much. This is how I would like my life to be when I am older:</p2>
-<P3></P3>
+
 <img src="phuket-romantic-beaches.jpg" alt="Lovely Beach">
+
+<p3> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
 
 <style>
 
@@ -21,7 +23,7 @@ h1{
     font-size: 30px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: White;
-    border-block-color: White;
+    
 
 }
 
