--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@ p2{
         color:orange;
 }
 
+p3{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: orange;
+    
+
+}
+
 
    
 
