--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <p2>I don't know how to use CSS and HTML and I am trying to learn how to use it successfully so later in life things wil be easier and I won't struggle as much. This is how I would like my life to be when I am older:</p2>
 
-<img src="phuket-romantic-beaches.jpg" alt="Lovely Beach">
+<img src="phuket-romantic-beaches.jpg" alt="Lovely Beach";>
 
-<p3> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
+<p3> ; But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
 
 <style>
 
@@ -50,6 +50,11 @@ p3{
 
 
 </style>
+<script>
+
+    console.log(5);
+    alert('Hello');
+</script>
 </body>
 </html>
 
