--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="phuket-romantic-beaches.jpg" alt="Lovely Beach";>
 
-<p3> ; But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
+<p3><br> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
 
 <style>
 
