--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@ h1{
     font-size: 30px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: White;
+    border-style: outset;
+    border-color: orange;
+    border-width: 10px;
+    
     
 
 }
@@ -53,7 +57,9 @@ p3{
 <script>
 
     console.log(5);
-    alert('Hello');
+    alert('Do you want to see my website?');
+    console.log('this is my website and I am learning how to use javascript properly.')
+    var x = document.getElementsByClassName("Button");
 </script>
 </body>
 </html>
