--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@ h1{
     color: White;
     border-style: outset;
     border-color: orange;
-    border-width: 10px;
-    
+    border-width: 2px;
+    border-radius: 5px;
+
     
 
 }
@@ -57,7 +58,7 @@ p3{
 <script>
 
     console.log(5);
-    alert('Do you want to see my website?');
+    alert('Click OK to see my website.');
     console.log('this is my website and I am learning how to use javascript properly.')
     var x = document.getElementsByClassName("Button");
 </script>
