--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p{
 h1{
     font-size: 30px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: White;
+    color:burlywood;
     border-style: outset;
     border-color: orange;
     border-width: 2px;
@@ -60,6 +60,7 @@ p3{
     console.log(5);
     alert('Click OK to see my website.');
     console.log('this is my website and I am learning how to use javascript properly.')
+    console.log('It is still a work in progress.')
     var x = document.getElementsByClassName("Button");
 </script>
 </body>
