--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p{
 h1{
     font-size: 30px;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:burlywood;
+    color:lightyellow;
     border-style: outset;
     border-color: orange;
     border-width: 2px;
