--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
 <p3><br> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
 
+<button onclick="myFunction()">Click me</button>
+<p id="demo"></p>
+
+<script>
+    function myFunction() {
+      document.getElementById("demo").innerHTML = "This button works and is displaying text.";
+    }
+    </script>
+    
+
 <style>
 
 p{
