--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <img src="phuket-romantic-beaches.jpg" alt="Lovely Beach";>
 
 <p3><br> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
+<p4><br> Click this button to see what happens:</p4>
 
-<button onclick="myFunction()">Click me</button>
+
+<br><button onclick="myFunction()">Click me</button>
 <p id="demo"></p>
 
 <script>
@@ -49,15 +51,21 @@ body{
 
 p2{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
- 
-        color:orange;
+    color:orange;
+    font-size: 20px;
 }
 
 p3{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: orange;
+    font-size: 20px;
+}
 
-
+p4{
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:orange;
+    font-size: 20px;
+    
 }
 
 
