--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test HTML page - Day 1 </title>
+<title>Test HTML Page for Random Things </title>
 </head>
 <body>
 
@@ -37,11 +37,8 @@ h1{
     color:lightyellow;
     border-style: outset;
     border-color: orange;
-    border-width: 2px;
-    border-radius: 5px;
-
-    
-
+    border-width: 5px;
+    border-radius: 10px;
 }
 
 body{
@@ -65,7 +62,7 @@ p4{
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color:orange;
     font-size: 20px;
-    
+
 }
 
 
