--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 <title>Test HTML Page for Random Things </title>
+<link rel="stylesheet" href="index.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="index.js"></script>
 </head>
 <body>
 
-<h1>                           THIS IS MY RANDOM HTML TEST PAGE </h1>
+<h1> THIS IS MY RANDOM HTML TEST PAGE </h1>
 
 <p2>I don't know how to use CSS and HTML and I am trying to learn how to use it successfully so later in life things wil be easier and I won't struggle as much. This is how I would like my life to be when I am older:</p2>
 
@@ -18,65 +21,8 @@
 <br><button onclick="myFunction()">Click me</button>
 <p id="demo"></p>
 
-<script>
-    function myFunction() {
-      document.getElementById("demo").innerHTML = "This button works and is displaying text.";
-    }
-    </script>
-    
-
-<style>
-
-p{
-    color: aqua;
-}
-
-h1{
-    font-size: 30px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:lightyellow;
-    border-style: outset;
-    border-color: orange;
-    border-width: 3px;
-    border-radius: 10px;
-}
-
-body{
-    background-color:aqua;
-}
-
-p2{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:orange;
-    font-size: 20px;
-}
-
-p3{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: orange;
-    font-size: 20px;
-}
-
-p4{
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:orange;
-    font-size: 20px;
-
-}
 
 
-   
-
-
-</style>
-<script>
-
-    console.log(5);
-    alert('Click OK to see my website.');
-    console.log('this is my website and I am learning how to use javascript properly.')
-    console.log('It is still a work in progress.')
-    var x = document.getElementsByClassName("Button");
-</script>
 </body>
 </html>
 
