--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <h1> THIS IS MY RANDOM HTML TEST PAGE </h1>
 
-<p2>I don't know how to use CSS and HTML and I am trying to learn how to use it successfully so later in life things wil be easier and I won't struggle as much. This is how I would like my life to be when I am older:</p2>
+<p>I don't know how to use CSS and HTML and I am trying to learn how to use it successfully so later in life things wil be easier and I won't struggle as much. This is how I would like my life to be when I am older:</p>
 
 <img src="phuket-romantic-beaches.jpg" alt="Lovely Beach";>
 
-<p3><br> But life is not that easy, I have to work hard if that is what I want my life to be like.</p3>
-<p4><br> Click this button to see what happens:</p4>
+<p><br> But life is not that easy, I have to work hard if that is what I want my life to be like.</p>
+<p><br> Click this button to see what happens:</p>
 
 
 <br><button onclick="myFunction()">Click me</button>
